fix: add initialLocation in sendDestination endpoint
